# claude-code-adaptor

./: .env.example  .gitignore  Cargo.toml  README.md  config.json  custom_config.json
.claude/: settings.local.json
src/: lib.rs  main.rs
src/adapters/: mod.rs  openai_response_adapter.rs  openai_stream_adapter.rs  request_adapter.rs  response_adapter.rs
src/cli/: mod.rs
src/config/: mod.rs
src/models/: claude.rs  claude_count_tokens.rs  claude_messages.rs  error.rs  mod.rs  openai.rs  qwen3.rs
src/services/: mod.rs  openai_service.rs  proxy_service.rs  qwen_service.rs  token_counter.rs
