[package]
name = "claude-code-adaptor"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
clap = { version = "4.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
tokio-stream = "0.1"
futures = "0.3"
hyper = "1.6.0"
http-body = "1.0.1"
bytes = "1.10.1"

[dev-dependencies]
tokio-test = "0.4"
